Css changes to the formsand fix off unaligned textareas

--- a/src/styles/editStory.module.css
+++ b/src/styles/editStory.module.css
@@ -31,7 +31,7 @@
     justify-content: center;
     align-items: center;
     height: 100%;
-    min-width: 0%;
+    min-width: 50%;
     padding: 100px;
     background-color: #ebebeb;
     border-radius: 20px;
@@ -47,14 +47,13 @@
 .startYear,
 .addNewPostFormDescription,
 .addNewPostFormContact,
-.energyStory,
 .addNewPostFormExternalLinks,
+.openData,
 .addNewPostFormInput {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
     margin-top: 10px;
+    width: 100%;
 }
 
 .addNewPostFormTitle input,
@@ -138,6 +137,7 @@
     margin: auto;
     display: block;
     height: 30px;
+    width: 100%;
     border-radius: 5px;
     border: 2px solid #8a8a8a;
 }
